--- a/src/core/layouts/components/Header.css
+++ b/src/core/layouts/components/Header.css
@@ -41,7 +41,7 @@ p {
   padding-top: 4.5px;
   display: flex;
   justify-content: center;
-  gap: .5rem;
+  gap: 0.5rem;
   justify-items: center;
   list-style: none;
   margin: 0;
@@ -273,7 +273,7 @@ p {
   transition: transform 250ms ease;
 }
 
-[data-state="open"]>.CaretDown {
+[data-state="open"] > .CaretDown {
   transform: rotate(-180deg);
 }
 
