--- a/src/core/layouts/components/SideNav.css
+++ b/src/core/layouts/components/SideNav.css
@@ -2,16 +2,19 @@
   background-color: var(--white-a4);
   width: 280px;
   height: 100vh;
-  box-shadow: 4px 70px 6px 2px var(--black-a1), 1px 70px 0px 2px var(--white-a7);
+  box-shadow:
+    4px 70px 6px 2px var(--black-a1),
+    1px 70px 0px 2px var(--white-a7);
   backdrop-filter: blur(5px);
   position: sticky;
 }
 
 .dark .SideNavWrapper {
   background-color: var(--black-a4);
-  box-shadow: 4px 70px 6px 2px var(--white-a1), 1px 70px 0px 1px var(--white-a3);
+  box-shadow:
+    4px 70px 6px 2px var(--white-a1),
+    1px 70px 0px 1px var(--white-a3);
 }
-
 
 .SideNavWrapper.mini {
   width: 80px;
