--- a/src/core/layouts/components/Header.css
+++ b/src/core/layouts/components/Header.css
@@ -1,7 +1,4 @@
 .NavigationContainer {
-  display: flex;
-  justify-content: space-between;
-  justify-items: center;
   background-color: var(--white-a4);
   padding: 4px;
   height: 70px;
@@ -12,6 +9,8 @@
   inset-block-start: 0;
   backdrop-filter: blur(5px);
   box-shadow: 4px 2px 6px 2px var(--black-a1);
+  display: flex;
+  align-items: center;
 }
 
 .dark .NavigationContainer {
@@ -22,23 +21,39 @@
 
 .NavigationMenuRoot {
   position: relative;
-  z-index: 1;
   display: flex;
-  justify-content: flex-end;
-  justify-items: center;
-  list-style: none;
-  overflow-x: visible;
-  flex-grow: 1;
+  justify-content: center;
+  z-index: 1;
 }
 
 .NavigationMenuList {
-  padding-top: 4.5px;
   display: flex;
   justify-content: center;
-  gap: 0.5rem;
-  justify-items: center;
+  padding: 4px;
+  border-radius: 6px;
   list-style: none;
   margin: 0;
+}
+
+.NavigationContainer li {
+  list-style: none;
+}
+
+.NavigationContainer ul {
+  padding: 0;
+  display: flex;
+  gap: 0.5rem;
+  position: relative;
+}
+
+.ViewportPosition {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  top: 100%;
+  left: 0;
+  perspective: 2000px;
 }
 
 .NavigationMenuTrigger,
@@ -49,18 +64,18 @@
   font-weight: 500;
   line-height: 1;
   border-radius: 4px;
-  font-size: 16px;
-  color: var(--orange-11);
+  font-size: 15px;
+  color: var(--violet-11);
 }
 
 .NavigationMenuTrigger:focus,
 .NavigationMenuLink:focus {
-  box-shadow: 0 0 0 2px var(--orange-7);
+  box-shadow: 0 0 0 2px var(--violet-7);
 }
 
 .NavigationMenuTrigger:hover,
 .NavigationMenuLink:hover {
-  background-color: var(--orange-3);
+  background-color: var(--violet-3);
 }
 
 .NavigationMenuTrigger {
@@ -70,19 +85,25 @@
   gap: 2px;
 }
 
-.NavigationMenuLink {
-  display: block;
-  text-decoration: none;
-  font-size: 15px;
-  line-height: 1;
-}
-
 .NavigationMenuContent {
   position: absolute;
-  top: 30px;
-  width: 100%;
+  top: 53px;
+  right: 0;
   animation-duration: 250ms;
   animation-timing-function: ease;
+  background-color: var(--white-a10);
+  border-radius: 0.5rem;
+  box-shadow: var(--shadow-4);
+  border: 2px solid var(--white-a5);
+}
+
+.dark .NavigationMenuContent {
+  background-color: var(--black-a9);
+  box-shadow:
+    0 0 0 1px color-mix(in oklab, var(--gray-a1), var(--gray-6) 25%),
+    0 8px 40px var(--black-a3),
+    0 12px 32px -16px var(--black-a5);
+  border: 1px solid var(--white-a3);
 }
 
 .NavigationMenuContent[data-motion="from-start"] {
@@ -112,7 +133,7 @@
   align-items: flex-end;
   justify-content: center;
   height: 10px;
-  top: 100%;
+  top: calc(100% - 5px);
   overflow: hidden;
   z-index: 1;
   transition:
@@ -133,7 +154,7 @@
   transform-origin: top center;
   margin-top: 10px;
   width: 100%;
-  background-color: #fafafa;
+  background-color: white;
   border-radius: 6px;
   overflow: hidden;
   box-shadow:
@@ -144,10 +165,8 @@
     width,
     height,
     300ms ease;
-}
-
-.dark .NavigationMenuViewport {
-  background-color: #222;
+  min-width: 200px;
+  max-width: 100vw;
 }
 
 .NavigationMenuViewport[data-state="open"] {
@@ -164,121 +183,58 @@
   }
 }
 
-.List {
-  display: grid;
-  padding: 22px;
-  margin: 0;
-  column-gap: 10px;
-  list-style: none;
-}
-
-@media only screen and (min-width: 600px) {
-  .List.one {
-    width: 500px;
-    grid-template-columns: 0.75fr 1fr;
-  }
-
-  .List.two {
-    width: 600px;
-    grid-auto-flow: column;
-    grid-template-rows: repeat(3, 1fr);
-  }
-}
-
-.ListItemLink {
-  display: block;
-  outline: none;
-  text-decoration: none;
-  user-select: none;
-  padding: 12px;
-  border-radius: 6px;
-  font-size: 15px;
-  line-height: 1;
-}
-
-.ListItemLink:focus {
-  box-shadow: 0 0 0 2px var(--orange-7);
-}
-
-.ListItemLink:hover {
-  background-color: var(--mauve-3);
-}
-
-.ListItemHeading {
-  font-weight: 500;
-  line-height: 1.2;
-  margin-bottom: 5px;
-  color: var(--orange-12);
-}
-
-.ListItemText {
-  color: var(--mauve-11);
-  line-height: 1.4;
-  font-weight: initial;
-}
-
-.Callout {
-  display: flex;
-  justify-content: flex-end;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(135deg, var(--purple-9) 0%, var(--indigo-9) 100%);
-  border-radius: 6px;
-  padding: 25px;
-  text-decoration: none;
-  outline: none;
-  user-select: none;
-}
-
-.Callout:focus {
-  box-shadow: 0 0 0 2px var(--orange-7);
-}
-
-.CalloutHeading {
-  color: #fafafa;
-  font-size: 18px;
-  font-weight: 500;
-  line-height: 1.2;
-  margin-top: 16px;
-  margin-bottom: 7px;
-}
-
-.CalloutText {
-  color: var(--mauve-4);
-  font-size: 14px;
-  line-height: 1.3;
-}
-
 .ViewportPosition {
   position: absolute;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   width: 100%;
   top: 100%;
-  right: 0;
+  left: 0;
   perspective: 2000px;
 }
 
 .CaretDown {
   position: relative;
-  color: var(--orange-10);
+  color: var(--violet-10);
   top: 1px;
   transition: transform 250ms ease;
+  margin-left: 0.25rem;
 }
 
 [data-state="open"] > .CaretDown {
   transform: rotate(-180deg);
 }
 
+.NavigationMenuRoot button.NavigationMenuTrigger {
+  all: unset;
+  padding: 0.5rem 0.5rem;
+  display: flex;
+  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0.25rem;
+}
+
+.NavigationMenuRoot button.NavigationMenuTrigger:hover {
+  background-color: var(--gray-a2);
+}
+
+.NavigationMenuRoot button.NavigationMenuTrigger:active {
+  background-color: var(--gray-a3);
+}
+
 .Arrow {
   position: relative;
   top: 70%;
-  background-color: white;
+  background-color: var(--white-a10);
   width: 10px;
   height: 10px;
   transform: rotate(45deg);
   border-top-left-radius: 2px;
+}
+
+.dark .Arrow {
+  background-color: var(--gray-a6);
 }
 
 @keyframes enterFromRight {
