--- a/src/core/layouts/components/SideNav.css
+++ b/src/core/layouts/components/SideNav.css
@@ -7,6 +7,7 @@
     1px 0 0px 2px var(--white-a7);
   backdrop-filter: blur(5px);
   position: sticky;
+  font-family: var(--font-geist-sans);
 }
 
 .dark .SideNavWrapper {
@@ -62,20 +63,11 @@
 
 .SideNavWrapper li .hover:hover,
 .SideNavWrapper li .hover.active {
-  background-color: var(--white-a6);
-  transition: 0.5s;
-  box-shadow: var(--shadow-4);
   border-radius: 0.5rem;
   text-decoration: none;
 }
 
 .dark .SideNavWrapper li .hover:hover,
 .dark .SideNavWrapper li .hover.active {
-  background-color: var(--black-a6);
-  box-shadow:
-    0 0 0 1px color-mix(in oklab, var(--gray-a1), var(--gray-6) 25%),
-    0 8px 40px var(--black-a3),
-    0 12px 32px -16px var(--black-a5);
-  transition: 0.5s;
   border-radius: 0.5rem;
 }
