--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,10 +12,12 @@ body {
 
 body {
   background-color: #fafafa;
+  color: var(--black-a9);
 }
 
 .dark body {
   background-color: #1f2025;
+  color: var(--white-a9);
 }
 
 .mx-auto {
@@ -216,17 +218,32 @@ body {
   flex-direction: column;
 }
 
-.hover:hover {
+.hover:hover,
+.active {
   background-color: var(--white-a6);
   transition: 0.5s;
-  box-shadow: var(--shadow-4);
+  box-shadow:
+    0px 0px 2px 2px white,
+    var(--shadow-4);
 }
 
-.dark .hover:hover {
+.dark .hover:hover,
+.dark .active {
   background-color: var(--black-a6);
-  box-shadow:
-    0 0 0 1px color-mix(in oklab, var(--gray-a1), var(--gray-6) 25%),
-    0 8px 40px var(--black-a3),
-    0 12px 32px -16px var(--white-a5);
+  box-shadow: var(--shadow-4);
   transition: 0.5s;
+}
+
+.layout-bg-blur {
+  background: url(/images/background.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.layout-bg-alpha {
+  background-color: var(--white-a9);
+}
+
+.dark .layout-bg-alpha {
+  background-color: var(--black-a9);
 }
