--- a/src/core/layouts/components/SideNav.css
+++ b/src/core/layouts/components/SideNav.css
@@ -1,20 +1,15 @@
 .SideNavWrapper {
-  background-color: var(--white-a4);
+  background-color: var(--color-panel);
   width: 280px;
   height: 100vh;
-  box-shadow:
-    4px 0 6px 2px var(--black-a1),
-    1px 0 0px 2px var(--white-a7);
-  backdrop-filter: blur(5px);
+  backdrop-filter: blur(64px);
   position: sticky;
   font-family: var(--font-geist-sans);
+  border-right: 2px solid var(--white-a9);
 }
 
 .dark .SideNavWrapper {
-  background-color: var(--black-a4);
-  box-shadow:
-    4px 0 6px 2px var(--white-a1),
-    1px 0 0px 1px var(--white-a3);
+  border-right: 1px solid var(--white-a3);
 }
 
 .SideNavWrapper.mini {
@@ -65,9 +60,4 @@
 .SideNavWrapper li .hover.active {
   border-radius: 0.5rem;
   text-decoration: none;
-}
-
-.dark .SideNavWrapper li .hover:hover,
-.dark .SideNavWrapper li .hover.active {
-  border-radius: 0.5rem;
 }
