--- a/src/core/layouts/components/Header.css
+++ b/src/core/layouts/components/Header.css
@@ -6,10 +6,22 @@
   right: 0;
   top: 0;
   inset-block-start: 0;
-  backdrop-filter: blur(64px);
   display: flex;
   align-items: center;
   border-bottom: 2px solid var(--white-a9);
+  z-index: 99;
+}
+
+.NavigationContainer::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  backdrop-filter: blur(64px);
+  z-index: -1;
 }
 
 .dark .NavigationContainer {
@@ -86,13 +98,15 @@
   position: absolute;
   top: 68px;
   right: 0;
+  animation-name: scaleIn;
   animation-duration: 250ms;
   animation-timing-function: ease;
   background-color: var(--color-panel);
   border-radius: 0.5rem;
   box-shadow: var(--shadow-4);
-  backdrop-filter: blur(64px);
+  backdrop-filter: blur(64px) !important;
   border: 2px solid var(--white-a5);
+  z-index: 99;
 }
 
 .dark .NavigationMenuContent {
