--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,76 +37,6 @@ body {
   width: 100% !important;
 }
 
-.p-1 {
-  padding: 0.25rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-3 {
-  padding: 1rem;
-}
-
-.p-4 {
-  padding: 1.5rem;
-}
-
-.p-5 {
-  padding: 3rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-3 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.px-4 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
-}
-
-.px-5 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-3 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-4 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-5 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
@@ -125,86 +55,6 @@ body {
 
 .me-auto {
   margin-right: auto;
-}
-
-.ms-1 {
-  margin-left: 0.25rem;
-}
-
-.ms-2 {
-  margin-left: 0.5rem;
-}
-
-.ms-3 {
-  margin-left: 1rem;
-}
-
-.ms-4 {
-  margin-left: 1.5rem;
-}
-
-.ms-5 {
-  margin-left: 3rem;
-}
-
-.me-1 {
-  margin-right: 0.25rem;
-}
-
-.me-2 {
-  margin-right: 0.5rem;
-}
-
-.me-3 {
-  margin-right: 1rem;
-}
-
-.me-4 {
-  margin-right: 1.5rem;
-}
-
-.me-5 {
-  margin-right: 3rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
-.mt-3 {
-  margin-top: 1rem;
-}
-
-.mt-4 {
-  margin-top: 1.5rem;
-}
-
-.mt-5 {
-  margin-top: 3rem;
-}
-
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
-
-.mb-3 {
-  margin-bottom: 1rem;
-}
-
-.mb-4 {
-  margin-bottom: 1.5rem;
-}
-
-.mb-5 {
-  margin-bottom: 3rem;
 }
 
 .flex-center {
@@ -248,6 +98,18 @@ body {
   background-color: var(--black-a9);
 }
 
+.layout-bg-alpha-gradient-bottom {
+  background: linear-gradient(to bottom, var(--white-a9), var(--white-a5));
+}
+
+.dark .layout-bg-alpha-gradient-bottom {
+  background: linear-gradient(to bottom, var(--black-a9), var(--black-a5));
+}
+
+.bg-hover-transparent:hover {
+  background: transparent;
+}
+
 .bg-panel {
   background-color: var(--color-panel);
   backdrop-filter: blur(64px);
@@ -255,5 +117,5 @@ body {
 
 a {
   text-decoration: none;
-  color: var(--accent-a10);
+  color: inherit;
 }
